<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MyProfileActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.ActionBarOverlay"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myProfileToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/my_profile"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopUpOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>
    
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@drawable/normal_backgorund"
       >
       
       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/my_profile_content_margin_startEnd"
           android:layout_marginEnd="@dimen/my_profile_content_margin_startEnd"
           android:layout_marginBottom="@dimen/my_profile_content_margin_TopBottom"
           android:layout_marginTop="@dimen/my_profile_content_margin_TopBottom"
           android:elevation="@dimen/cardview_elevation"
           android:contentDescription="CardView Description">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/my_profile_content_screen_padding">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/myProfile_cv"
                    android:layout_width="@dimen/my_profile_userScreen_image_size"
                    android:layout_height="@dimen/my_profile_userScreen_image_size"
                    android:src="@drawable/ic_user_place_holder"
                    android:contentDescription="user image description"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_name_til_margin_top">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_profileName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:textSize="@dimen/et_text_size"
                        android:hint="@string/Name"
                        tools:text="jacob"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_email_marginTop">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_profileEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:background="@color/white"
                        android:textSize="@dimen/et_text_size"
                        android:hint="@string/Email"
                        tools:text="jacob@email.com"
                        android:inputType="textEmailAddress"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_profileMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:textSize="@dimen/et_text_size"
                        android:hint="@string/mobile"
                        tools:text="1111111"
                        android:inputType="phone"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <android.widget.Button
                    android:id="@+id/updateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                    android:gravity="center"
                    android:background="@drawable/gradientbutton"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size"
                    />

            </LinearLayout>

       </androidx.cardview.widget.CardView>

   </LinearLayout>

</LinearLayout>