<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateBoardActivity"
    android:orientation="vertical"
    android:background="@drawable/normal_backgorund"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.ActionBarOverlay">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/create_board_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme.PopUpOverlay"
        app:title="@string/Create_Board"
        app:titleTextColor="@color/white"
        />
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/normal_backgorund"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_profile_content_margin_startEnd"
            android:layout_marginEnd="@dimen/my_profile_content_margin_startEnd"
            android:layout_marginBottom="@dimen/my_profile_content_margin_TopBottom"
            android:layout_marginTop="@dimen/my_profile_content_margin_TopBottom"
            android:elevation="@dimen/cardview_elevation"
            android:contentDescription="CardView Description">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/create_board_content_padding">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/create_board_cv"
                    android:layout_width="@dimen/create_board_image_size"
                    android:layout_height="@dimen/my_profile_userScreen_image_size"
                    android:src="@drawable/ic_board_place_holder"
                    android:contentDescription="Board image description"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/Board_name_marginTop">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/boardName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:textSize="@dimen/et_text_size"
                        android:hint="@string/BoardName"
                        tools:text="jacob"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <android.widget.Button
                    android:id="@+id/create_board_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/create_board_btn_marginTop"
                    android:gravity="center"
                    android:background="@drawable/gradientbutton"
                    android:text="@string/Create_Board_btn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>